Use the sha1-2017 cert for very.badssl.com.

--- a/domains/misc/very.badssl.com/index.html
+++ b/domains/misc/very.badssl.com/index.html
@@ -6,7 +6,7 @@
   <link rel="apple-touch-icon" href="/icon-yellow.png"/>
   <style>
     html, body {
-      background: rgb(246, 207, 47);
+      background: red;
 
       margin: 0;
       padding: 0;
