Change front page link from sha1.badssl.com to sha1-2016.badssl.com.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -152,7 +152,7 @@
     <a href="https://wrong.host.badssl.com/" class="bad">wrong.host</a>
     <a href="https://self-signed.badssl.com/" class="bad">self-signed</a>
     <a href="https://sha1-2017.badssl.com/" class="bad no-interstitial">sha1-2017</a>
-    <a href="https://sha1.badssl.com/" class="dubious">sha1</a>
+    <a href="https://sha1-2016.badssl.com/" class="dubious">sha1-2016</a>
     <a href="https://mixed.badssl.com/" class="dubious">mixed</a>
     <a href="https://rc4.badssl.com/" class="neutral">rc4</a>
     <a href="https://cbc.badssl.com/" class="neutral">cbc</a>
