Fix a whole bunch of icon links.

--- a/domains/cipher-suite/cbc.badssl.com/index.html
+++ b/domains/cipher-suite/cbc.badssl.com/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>cbc.badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-gray.ico"/>
-  <link rel="apple-touch-icon" href="/icon-gray.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-gray.png"/>
   <style>
     html, body {
       background: gray;
