--- a/domains/diffie-hellman/dh1024.badssl.com/index.html
+++ b/domains/diffie-hellman/dh1024.badssl.com/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>dh1024.badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-yellow.ico"/>
-  <link rel="apple-touch-icon" href="/icon-yellow.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-yellow.png"/>
   <style>
     html, body {
       background: rgb(246, 207, 47);
