--- a/domains/hsts/hsts.badssl.com-https/index.html
+++ b/domains/hsts/hsts.badssl.com-https/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>hsts.badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-green.ico"/>
-  <link rel="apple-touch-icon" href="/icon-green.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-green.png"/>
   <style>
     html, body {
       background: #484;
