--- a/domains/hsts/preloaded-hsts.badssl.com-http/index.html
+++ b/domains/hsts/preloaded-hsts.badssl.com-http/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>preloaded-hsts.badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-red.ico"/>
-  <link rel="apple-touch-icon" href="/icon-red.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-red.png"/>
   <style>
     html, body {
       background: #A44;
