--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-blue.ico"/>
-  <link rel="apple-touch-icon" href="/icon-blue.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-blue.png"/>
   <style>
     html, body {
       background: rgb(77, 149, 218);
