--- a/domains/cert/incomplete-chain.badssl.com/index.html
+++ b/domains/cert/incomplete-chain.badssl.com/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>incomplete-chain.badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-orange.ico"/>
-  <link rel="apple-touch-icon" href="/icon-orange.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-orange.png"/>
   <style>
     html, body {
       background: rgb(243, 121, 46);
