--- a/domains/cert/sha256.badssl.com/index.html
+++ b/domains/cert/sha256.badssl.com/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>sha256.badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-green.ico"/>
-  <link rel="apple-touch-icon" href="/icon-green.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-green.png"/>
   <style>
     html, body {
       background: green;
