--- a/domains/diffie-hellman/dh-composite.badssl.com/index.html
+++ b/domains/diffie-hellman/dh-composite.badssl.com/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>dh-composite.badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-red.ico"/>
-  <link rel="apple-touch-icon" href="/icon-red.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-red.png"/>
   <style>
     html, body {
       background: red;
