--- a/domains/misc/very.badssl.com/index.html
+++ b/domains/misc/very.badssl.com/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>very.badssl.com</title>
   <link rel="shortcut icon" href="/icons/favicon-yellow.ico"/>
-  <link rel="apple-touch-icon" href="/icon-yellow.png"/>
+  <link rel="apple-touch-icon" href="/icons/icon-yellow.png"/>
   <style>
     html, body {
       background: red;
