Fix incorrect/missing icon links.

--- a/domains/cipher-suite/rc4-md5.badssl.com/index.html
+++ b/domains/cipher-suite/rc4-md5.badssl.com/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>rc4-md5.badssl.com</title>
+  <link rel="shortcut icon" href="/icons/favicon-gray.ico"/>
+  <link rel="apple-touch-icon" href="/icons/icon-gray.png"/>
   <style>
     html, body {
       background: gray;
