--- a/domains/misc/very.badssl.com/index.html
+++ b/domains/misc/very.badssl.com/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>very.badssl.com</title>
-  <link rel="shortcut icon" href="/icons/favicon-yellow.ico"/>
-  <link rel="apple-touch-icon" href="/icons/icon-yellow.png"/>
+  <link rel="shortcut icon" href="/icons/favicon-red.ico"/>
+  <link rel="apple-touch-icon" href="/icons/icon-red.png"/>
   <style>
     html, body {
       background: red;
