Update very.badssl.com link on front page.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -98,6 +98,9 @@
       color: #222;
       background: rgb(243, 121, 46);
     }
+    #links .comic-sans {
+      font-family: "Comic Sans MS", "Comic Sans", "Marker Felt";
+    }
     #links .more {
       display: none;
     }
@@ -169,7 +172,7 @@
     <a href="https://dh-small-subgroup.badssl.com/" class="more bad">dh-small-subgroup</a>
     <a href="https://dh-composite.badssl.com/" class="more bad">dh-composite</a>
     <a href="https://incomplete-chain.badssl.com/" class="more orange">incomplete-chain</a>
-    <a href="https://very.badssl.com/" class="more dubious">very</a>
+    <a href="https://very.badssl.com/" class="more bad comic-sans">very</a>
     <a href="https://rc4-md5.badssl.com/" class="more neutral">rc4-md5</a>
     <a href="http://http.badssl.com/" class="more neutral">http</a>
     <div id="ua"></div>
