--- a/domains/misc/mixed.badssl.com/index.html
+++ b/domains/misc/mixed.badssl.com/index.html
@@ -42,7 +42,7 @@
 <body>
     <h1>
       mixed.badssl.com<br>
-      <img src="http://mixed.badssl.com/image.jpg">
+      <img src="http://mixed.badssl.com/image.jpg" alt="mixed badssl">
     </body>
 </body>
 </html>
