--- a/domains/misc/very.badssl.com/index.html
+++ b/domains/misc/very.badssl.com/index.html
@@ -42,7 +42,7 @@
 <body>
     <h1>
       very.badssl.com<br>
-      <img src="http://very.badssl.com/image.jpg">
+      <img src="http://very.badssl.com/image.jpg" alt="very badssl">
     </body>
 </body>
 </html>
