--- a/domains/misc/very.badssl.com/index.html
+++ b/domains/misc/very.badssl.com/index.html
@@ -43,6 +43,7 @@
     <h1>
       very.badssl.com<br>
       <img src="http://very.badssl.com/image.jpg" alt="very badssl">
+      <script src="http://very.badssl.com/test/imported.js"></script>
     </body>
 </body>
 </html>
