Fix UA simplification function to return the UA that was passed in.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -134,7 +134,7 @@
         return match[0];
       }
     }
-    return navigator.userAgent;
+    return ua;
   }
 
   window.addEventListener("load", function() {
