Add Opera Mini for iOS (OPiOS) to simplifed user agent list.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -125,6 +125,7 @@
       /CriOS\/[\d\.]*\b/,
       /Firefox\/[\d\.]*\b/,
       /OPR\/[\d\.]*\b/,
+      /OPiOS\/[\d\.]*\b/,
       /Version\/[\d\.]*\b/ /* Safari has "Version/8.0.5 Safari/600.5.17", but "Safari/600.5.17" is the WebKit version, which Chrome and Opera also include. */
     ]
 
