Add an example of active mixed content

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -158,6 +158,7 @@
     <a href="https://sha1-2017.badssl.com/" class="bad no-interstitial">sha1-2017</a>
     <a href="https://sha1-2016.badssl.com/" class="dubious">sha1-2016</a>
     <a href="https://mixed.badssl.com/" class="dubious">mixed</a>
+    <a href="https://mixed-active.badssl.com/" class="dubious">mixed-active</a>
     <a href="https://rc4.badssl.com/" class="neutral">rc4</a>
     <a href="https://cbc.badssl.com/" class="neutral">cbc</a>
     <a href="" id="reveal-more">More...</a>
