--- a/domains/misc/mixed-active.badssl.com/index.html
+++ b/domains/misc/mixed-active.badssl.com/index.html
@@ -47,6 +47,6 @@
       mixed-active.badssl.com<br>
       <span id="mixed"></span>
     </body>
-    <script src="./nonsecure.js"></script>
+    <script src="http://mixed-active.badssl.com/nonsecure.js"></script>
 </body>
 </html>
