Revert "Moving http: resources to http.badssl.com"
This reverts commit 47d11ca5abc127d2c77ebb549793e303038eed54.

--- a/domains/misc/mixed-active.badssl.com/index.html
+++ b/domains/misc/mixed-active.badssl.com/index.html
@@ -47,6 +47,6 @@
       mixed-active.badssl.com<br>
       <span id="mixed"></span>
     </body>
-    <script src="http://http.badssl.com/nonsecure.js"></script>
+    <script src="http://mixed-active.badssl.com/nonsecure.js"></script>
 </body>
 </html>
