--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -158,7 +158,6 @@
     <a href="https://sha1-2017.badssl.com/" class="bad no-interstitial">sha1-2017</a>
     <a href="https://sha1-2016.badssl.com/" class="dubious">sha1-2016</a>
     <a href="https://mixed.badssl.com/" class="dubious">mixed</a>
-    <a href="https://mixed-active.badssl.com/" class="dubious">mixed-active</a>
     <a href="https://rc4.badssl.com/" class="neutral">rc4</a>
     <a href="https://cbc.badssl.com/" class="neutral">cbc</a>
     <a href="" id="reveal-more">More...</a>
@@ -166,6 +165,7 @@
     <a href="https://hsts.badssl.com/" class="more goodish">hsts</a>
     <a href="https://preloaded-hsts.badssl.com/" class="more goodish">preloaded-hsts</a>
     <a href="https://subdomain.preloaded-hsts.badssl.com/" class="more bad">subdomain.<br>preloaded-hsts</a>
+    <a href="https://mixed-script.badssl.com/" class="more bad no-interstitial">mixed-script</a>
     <a href="https://dh480.badssl.com/" class="more bad">dh480</a>
     <a href="https://dh512.badssl.com/" class="more bad">dh512</a>
     <a href="https://dh1024.badssl.com/" class="more dubious">dh1024</a>
