--- a/domains/misc/mixed-script.badssl.com/index.html
+++ b/domains/misc/mixed-script.badssl.com/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>mixed.badssl.com</title>
-  <link rel="shortcut icon" href="/icons/favicon-yellow.ico"/>
-  <link rel="apple-touch-icon" href="/icons/icon-yellow.png"/>
+  <title>mixed-script.badssl.com</title>
+  <link rel="shortcut icon" href="/icons/favicon-red.ico"/>
+  <link rel="apple-touch-icon" href="/icons/icon-red.png"/>
   <style>
     html, body {
-      background: rgb(246, 207, 47);
+      background: gray;
 
       margin: 0;
       padding: 0;
@@ -26,27 +26,31 @@
       text-align: center;
       font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
       font-size: 5em;
-      font-size: 7vw;
+      font-size: 9vw;
       text-shadow:
         0 0 20px rgba(255, 255, 255, 0.5),
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
-    img {
-      width: 20vh;
-      max-width: 256;
-      margin-top: 5vh;
-    }
-    span {
-      font-size: 50%;
+    .footer {
+      background: rgba(0, 0, 0, 0.25);
+      
+      position: fixed;
+      width: 80vw;
+      bottom: 0;
+      left: 0;
+      padding: 2vh 10vw;
+
+      font-family: Helvetica, Tahoma, sans-serif;
+      text-align: center;
+      color: white;
+      font-size: 3vw;
     }
   </style>
 </head>
 <body>
-    <h1>
-      mixed-active.badssl.com<br>
-      <span id="mixed"></span>
-    </body>
-    <script src="http://mixed-active.badssl.com/nonsecure.js"></script>
+    <h1>mixed-script.<br>badssl.com</h1>
+    <div class="footer" id="footer">This page triggers active mixed content<br>(a script from an insecure URL).</div>
+    <script src="http://mixed-script.badssl.com/nonsecure.js"></script>
 </body>
 </html>
