--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -177,6 +177,11 @@
     <a href="https://very.badssl.com/" class="more bad comic-sans">very</a>
     <a href="https://rc4-md5.badssl.com/" class="more neutral">rc4-md5</a>
     <a href="http://http.badssl.com/" class="more neutral">http</a>
+    <a href="https://mixed.badssl.com/mixed/image" class="more dubious no-interstitial">mixed/image</a>
+    <a href="https://mixed.badssl.com/mixed/script" class="more bad no-interstitial">mixed/script</a>
+    <a href="https://mixed.badssl.com/mixed/css" class="more bad no-interstitial">mixed/css</a>
+    <a href="https://mixed.badssl.com/mixed/iframe" class="more bad no-interstitial">mixed/iframe</a>
+    <a href="https://mixed.badssl.com/mixed/font" class="more bad no-interstitial">mixed/font</a>
     <div id="ua"></div>
   </div>
 
