--- a/domains/hsts/preloaded-hsts.badssl.com-https/index.html
+++ b/domains/hsts/preloaded-hsts.badssl.com-https/index.html
@@ -54,6 +54,6 @@
 </head>
 <body>
     <h1>preloaded-hsts.<br>badssl.com</h1>
-    <div class="footer"><img id="http-vs-https" src="http://hsts.badssl.com/hsts-test/status.svg" title="This is an image with an HTTP source location specified. If HSTS is working, the source should be rewritten to HTTPS. The image will vary depending on the outcome."><br>Preloaded in: Chrome 44, Firefox 41</div>
+    <div class="footer"><img id="http-vs-https" src="http://preloaded-hsts.badssl.com/hsts-test/status.svg" title="This is an image with an HTTP source location specified. If HSTS is working, the source should be rewritten to HTTPS. The image will vary depending on the outcome."><br>Preloaded in: Chrome 44, Firefox 41</div>
 </body>
 </html>
