Make the GitHub banner text less weird.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -189,7 +189,7 @@
 
   <div class="github-fork-ribbon-wrapper right">
       <div class="github-fork-ribbon">
-          <a href="https://github.com/lgarron/badssl.com">Fork me on GitHub</a>
+          <a href="https://github.com/lgarron/badssl.com">On GitHub</a>
       </div>
   </div>
 
