--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -182,6 +182,8 @@
     <a href="https://mixed.badssl.com/mixed/css" class="more bad no-interstitial">mixed/css</a>
     <a href="https://mixed.badssl.com/mixed/iframe" class="more bad no-interstitial">mixed/iframe</a>
     <a href="https://mixed.badssl.com/mixed/font" class="more bad no-interstitial">mixed/font</a>
+    <a href="https://long-extended-subdomain-name-containing-many-letters-and-dashes.badssl.com/" class="more good">long-extended-subdomain-name-containing-many-letters-and-dashes</a>
+    <a href="https://longextendedsubdomainnamewithoutdashesinordertotestwordwrapping.badssl.com/" class="more good">longextended<wbr>subdomainname<wbr>withoutdashes<wbr>inordertotest<wbr>wordwrapping</a>
     <div id="ua"></div>
   </div>
 
