Fix badly broken Mozilla Modern, add Mozilla Intermediate, Mozilla Old

--- a/domains/cipher-suite/mozilla-intermediate.badssl.com/index.html
+++ b/domains/cipher-suite/mozilla-intermediate.badssl.com/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>mozilla-modern.badssl.com</title>
-  <link rel="shortcut icon" href="/icons/favicon-green.ico"/>
-  <link rel="apple-touch-icon" href="/icons/icon-green.png"/>
+  <title>mozilla-intermediate.badssl.com</title>
+  <link rel="shortcut icon" href="/icons/favicon-yellow.ico"/>
+  <link rel="apple-touch-icon" href="/icons/icon-yellow.png"/>
   <style>
     html, body {
-      background: green;
+      background: rgb(246, 207, 47);
 
       margin: 0;
       padding: 0;
@@ -58,7 +58,7 @@
   </style>
 </head>
 <body>
-    <h1>mozilla-modern.<br>badssl.com</h1>
-    <div class="footer">This site uses the Mozilla &ldquo;<a href="https://wiki.mozilla.org/Security/Server_Side_TLS#Modern_compatibility">Modern</a>&rdquo; TLS configuration.</div>
+    <h1>mozilla-intermediate.<br>badssl.com</h1>
+    <div class="footer">This site uses the Mozilla &ldquo;<a href="https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29">Intermediate</a>&rdquo; TLS configuration.</div>
 </body>
 </html>
