Use different domains for very.badssl.com resources.

--- a/domains/mixed/very.badssl.com/index.html
+++ b/domains/mixed/very.badssl.com/index.html
@@ -43,7 +43,7 @@
     <h1>
       very.badssl.com<br>
       <img src="http://very.badssl.com/image.jpg" alt="very badssl">
-      <script src="http://very.badssl.com/test/imported.js"></script>
+      <script src="http://http.badssl.com/test/imported.js"></script>
     </body>
 </body>
 </html>
