Add upgrade.badssl.com for upgrade-insecure-requests. Closes #78.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -220,6 +220,7 @@
     <a href="https://mixed.badssl.com/mixed/font" class="more bad no-interstitial">mixed/font</a>
     <a href="https://long-extended-subdomain-name-containing-many-letters-and-dashes.badssl.com/" class="more good">long-extended-subdomain-name-containing-many-letters-and-dashes</a>
     <a href="https://longextendedsubdomainnamewithoutdashesinordertotestwordwrapping.badssl.com/" class="more good">longextended<wbr>subdomainname<wbr>withoutdashes<wbr>inordertotest<wbr>wordwrapping</a>
+    <a href="https://upgrade.badssl.com/" class="more good">upgrade</a>
     <div class="browser-info">
       <span id="ua"></span>
       <br>
