--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -215,6 +215,7 @@
     <a href="http://http.badssl.com/" class="more neutral">http</a>
     <a href="https://mixed.badssl.com/mixed/image" class="more dubious no-interstitial">mixed/image</a>
     <a href="https://mixed.badssl.com/mixed/form" class="more dubious no-interstitial">mixed/form</a>
+    <a href="https://mixed.badssl.com/mixed/password" class="more dubious no-interstitial">mixed/form</a>
     <a href="https://mixed.badssl.com/mixed/script" class="more bad no-interstitial">mixed/script</a>
     <a href="https://mixed.badssl.com/mixed/css" class="more bad no-interstitial">mixed/css</a>
     <a href="https://mixed.badssl.com/mixed/iframe" class="more bad no-interstitial">mixed/iframe</a>
