Add http password site
(and update commit date)

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -213,6 +213,7 @@
     <a href="https://very.badssl.com/" class="more bad comic-sans">very</a>
     <a href="https://rc4-md5.badssl.com/" class="more neutral">rc4-md5</a>
     <a href="http://http.badssl.com/" class="more neutral">http</a>
+    <a href="http://http.badssl.com/password/" class="more bad">http/password</a>
     <a href="https://mixed.badssl.com/mixed/image" class="more dubious no-interstitial">mixed/image</a>
     <a href="https://mixed.badssl.com/mixed/form" class="more dubious no-interstitial">mixed/form</a>
     <a href="https://mixed.badssl.com/mixed/script" class="more bad no-interstitial">mixed/script</a>
