--- a/domains/misc/https-everywhere.badssl.com-http/index.html
+++ b/domains/misc/https-everywhere.badssl.com-http/index.html
@@ -32,31 +32,34 @@
         0 0 40px rgba(255, 255, 255, 0.5),
         0 0 60px rgba(255, 255, 255, 0.5);
     }
-	.footer {
+    .footer {
       background: rgba(0, 0, 0, 0.25);
       
       position: fixed;
-      width: 80vw;
+      width: 94vw;
       bottom: 0;
       left: 0;
-      padding: 2vh 10vw;
+      padding: 2vh 3vw;
 
       font-family: Helvetica, Tahoma, sans-serif;
       text-align: center;
       color: white;
-      font-size: 3vw;
+      font-size: 2.5vw;
     }
-	#http-vs-https {
+    #http-vs-https {
       height: 1.5em;
       vertical-align: middle;
     }
-	a {
-      color: rgb(255, 202, 202);
+    a {
+        color: rgba(255, 192, 192, 0.75);
+    }
+    a:hover {
+        color: white;
     }
   </style>
 </head>
 <body>
     <h1>https-everywhere.<br>badssl.com</h1>
-	<div class="footer">HTTPS-Everywhere does not work or is not enabled.<br>Included in: <a href="https://www.eff.org/https-everywhere">HTTPS-Everywhere</a> v[unknown]</div>
+  <div class="footer"><i>HTTPS Everywhere</i> does not work or is not enabled.<br>This domain is intended to be included in a future version of <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>.</div>
 </body>
 </html>
