--- a/domains/misc/https-everywhere.badssl.com-https/index.html
+++ b/domains/misc/https-everywhere.badssl.com-https/index.html
@@ -36,27 +36,30 @@
       background: rgba(0, 0, 0, 0.25);
       
       position: fixed;
-      width: 80vw;
+      width: 94vw;
       bottom: 0;
       left: 0;
-      padding: 2vh 10vw;
+      padding: 2vh 3vw;
 
       font-family: Helvetica, Tahoma, sans-serif;
       text-align: center;
       color: white;
-      font-size: 3vw;
+      font-size: 2.5vw;
     }
     #http-vs-https {
       height: 1.5em;
       vertical-align: middle;
     }
-	a {
-      color: rgb(211, 255, 202);
+    a {
+        color: rgba(192, 255, 192, 0.75);
+    }
+    a:hover {
+        color: white;
     }
   </style>
 </head>
 <body>
     <h1>https-everywhere.<br>badssl.com</h1>
-    <div class="footer"><img id="http-vs-https" src="http://https-everywhere.badssl.com/redirect-test/status.svg" title="This is an image with an HTTP source location specified. If HTTPS-Everywhere is working and activated, the source should be rewritten to HTTPS. The image will vary depending on the outcome."><br>Included in: <a href="https://www.eff.org/https-everywhere">HTTPS-Everywhere</a> v[unknown]</div>
+    <div class="footer"><img id="http-vs-https" src="http://https-everywhere.badssl.com/redirect-test/status.svg" title="This is an image with an HTTP source location specified. If HTTPS Everywhere is working and activated, the source should be rewritten to HTTPS. The image will vary depending on the outcome."><br>This domain is intended to be included in a future version of <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>.</div>
 </body>
 </html>
