--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -213,7 +213,7 @@
     <a href="https://very.badssl.com/" class="more bad comic-sans">very</a>
     <a href="https://rc4-md5.badssl.com/" class="more neutral">rc4-md5</a>
     <a href="http://http.badssl.com/" class="more neutral">http</a>
-    <a href="http://http.badssl.com/password" class="more bad">http/password</a>
+    <a href="http://http-password.badssl.com" class="more bad">http-password</a>
     <a href="https://mixed.badssl.com/mixed/image" class="more dubious no-interstitial">mixed/image</a>
     <a href="https://mixed.badssl.com/mixed/form" class="more dubious no-interstitial">mixed/form</a>
     <a href="https://mixed.badssl.com/mixed/password" class="more dubious no-interstitial">mixed/password</a>
