--- a/domains/misc/http.badssl.com/resources/iframe.html
+++ b/domains/misc/http.badssl.com/resources/iframe.html
@@ -1,17 +1,12 @@
-<style>
-html {
-  background: red;
-}
-h1 {
-  color: white;
-  text-align: center;
-  font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
-  font-size: 16vw;
-  text-shadow:
-    0 0 20px rgba(255, 255, 255, 0.5),
-    0 0 40px rgba(255, 255, 255, 0.5),
-    0 0 60px rgba(255, 255, 255, 0.5);
-}
-</style>
+---
+title: iframe
+layout: page
+favicon: red
+background: red
+---
 
-<h1>iframe</h1>
+<div id="content">
+  <h1 style="font-size: 20vw;">
+    iframe
+  </h1>
+</div>
