--- a/common/mixed/css/index.html
+++ b/common/mixed/css/index.html
@@ -1,59 +1,24 @@
-<!doctype html>
-<html>
-<head>
-  <title>mixed css</title>
-  <link rel="shortcut icon" href="/icons/favicon-red.ico"/>
-  <link rel="apple-touch-icon" href="/icons/icon-red.png"/>
-  <style>
-    html, body {
-      background: gray;
+---
+title: mixed css
+layout: page
+favicon: red
+background: gray
+---
 
-      margin: 0;
-      padding: 0;
+<style>
+  .triggered {
+    display: none;
+  }
+</style>
 
-      height: 100%;
-      display: -webkit-flexbox;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-    }
-    h1 {
-      color: white;
-      text-align: center;
-      font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
-      font-size: 5em;
-      font-size: 9vw;
-      text-shadow:
-        0 0 20px rgba(255, 255, 255, 0.5),
-        0 0 40px rgba(255, 255, 255, 0.5),
-        0 0 60px rgba(255, 255, 255, 0.5);
-    }
-    .footer {
-      background: rgba(0, 0, 0, 0.25);
-      
-      position: fixed;
-      width: 80vw;
-      bottom: 0;
-      left: 0;
-      padding: 2vh 10vw;
+<div id="content">
+  <h1 style="font-size: 9vw;">
+    mixed css
+  </h1>
+</div>
 
-      font-family: Helvetica, Tahoma, sans-serif;
-      text-align: center;
-      color: white;
-      font-size: 3vw;
-    }
-    .triggered {
-      display: none;
-    }
-  </style>
-</head>
-<body>
-    <h1>mixed css</h1>
-    <div class="footer" id="footer">This page <span class="not-triggered">triggers</span><span class="triggered">has triggered</span> insecure CSS.</div>
-  <link rel="stylesheet" href="http://http.badssl.com/resources/stylesheet.css">
-</body>
-</html>
+<div id="footer">
+  This page <span class="not-triggered">triggers</span><span class="triggered">has triggered</span> insecure CSS.
+</div>
+
+<link rel="stylesheet" href="http://{{ site.http-domain }}/resources/stylesheet.css">
