--- a/domains/cipher-suite/mozilla-old.badssl.com/index.html
+++ b/domains/cipher-suite/mozilla-old.badssl.com/index.html
@@ -1,64 +1,16 @@
-<!doctype html>
-<html>
-<head>
-  <title>mozilla-old.badssl.com</title>
-  <link rel="shortcut icon" href="/icons/favicon-gray.ico"/>
-  <link rel="apple-touch-icon" href="/icons/icon-gray.png"/>
-  <style>
-    html, body {
-      background: gray;
+---
+subdomain: mozilla-old
+layout: page
+favicon: red
+background: red
+---
 
-      margin: 0;
-      padding: 0;
+<div id="content">
+  <h1>
+    {{ page.subdomain }}.<br>{{ site.domain }}
+  </h1>
+</div>
 
-      height: 100%;
-      display: -webkit-flexbox;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-    }
-    h1 {
-      color: white;
-      text-align: center;
-      font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
-      font-size: 10vw;
-      text-shadow:
-        0 0 20px rgba(255, 255, 255, 0.5),
-        0 0 40px rgba(255, 255, 255, 0.5),
-        0 0 60px rgba(255, 255, 255, 0.5);
-    }
-    .footer {
-      background: rgba(0, 0, 0, 0.25);
-
-      position: fixed;
-      width: 80vw;
-      bottom: 0;
-      left: 0;
-      padding: 2vh 10vw;
-
-      font-family: Helvetica, Tahoma, sans-serif;
-      text-align: center;
-      color: white;
-      font-size: 3vw;
-    }
-    a {
-      color: white;
-      transition: all 150ms;
-    }
-    a:hover {
-      text-shadow:
-        0px 0px 20px rgba(255, 255, 255, 0.5),
-        0px 0px 40px rgba(255, 255, 255, 0.5),
-        0px 0px 60px rgba(255, 255, 255, 0.5);
-    }
-  </style>
-</head>
-<body>
-    <h1>mozilla-old.<br>badssl.com</h1>
-    <div class="footer">This site uses the Mozilla &ldquo;<a href="https://wiki.mozilla.org/Security/Server_Side_TLS#Old_backward_compatibility">Old</a>&rdquo; TLS configuration.</div>
-</body>
-</html>
+<div id="footer">
+  This site uses the Mozilla &ldquo;<a href="https://wiki.mozilla.org/Security/Server_Side_TLS#Old_backward_compatibility">Old</a>&rdquo; TLS configuration.
+</div>
