--- a/domains/mixed/mixed-favicon.badssl.com/index.html
+++ b/domains/mixed/mixed-favicon.badssl.com/index.html
@@ -1,58 +1,16 @@
-<!doctype html>
-<html>
-<head>
-  <title>mixed-favicon.badssl.com</title>
-  <link rel="apple-touch-icon" href="/icons/icon-yellow.png"/>
-  <style>
-    html, body {
-      background: rgb(246, 207, 47);
+---
+subdomain: mixed-favicon
+layout: page
+favicon: yellow
+background: rgb(246, 207, 47)
+---
 
-      margin: 0;
-      padding: 0;
+<div id="content">
+  <h1 style="font-size: 9vw;">
+    {{ page.subdomain }}.<br>{{ site.domain }}
+  </h1>
+</div>
 
-      height: 100%;
-      display: -webkit-flexbox;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-    }
-    h1 {
-      color: white;
-      text-align: center;
-      font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
-      font-size: 5em;
-      font-size: 9vw;
-      text-shadow:
-        0 0 20px rgba(255, 255, 255, 0.5),
-        0 0 40px rgba(255, 255, 255, 0.5),
-        0 0 60px rgba(255, 255, 255, 0.5);
-    }
-    .footer {
-      background: rgba(0, 0, 0, 0.25);
-      
-      position: fixed;
-      width: 80vw;
-      bottom: 0;
-      left: 0;
-      padding: 2vh 10vw;
-
-      font-family: Helvetica, Tahoma, sans-serif;
-      text-align: center;
-      color: white;
-      font-size: 3vw;
-    }
-    .footer a {
-      color: white;
-    }
-  </style>
-</head>
-<body>
-    <h1>mixed-favicon.<br>badssl.com</h1>
-    <div class="footer">This site's <a href="/favicon.ico">implicit favicon</a> redirects to HTTP.</div>
-    </body>
-</body>
-</html>
+<div id="footer">
+  This site's <a href="/favicon.ico">implicit favicon</a> redirects to HTTP.
+</div>
