--- a/domains/upgrade/hsts.badssl.com-https/index.html
+++ b/domains/upgrade/hsts.badssl.com-https/index.html
@@ -1,59 +1,16 @@
-<!doctype html>
-<html>
-<head>
-  <title>hsts.badssl.com</title>
-  <link rel="shortcut icon" href="/icons/favicon-green.ico"/>
-  <link rel="apple-touch-icon" href="/icons/icon-green.png"/>
-  <style>
-    html, body {
-      background: #484;
+---
+subdomain: hsts
+layout: page
+favicon: green
+background: rgb(68, 136, 68)
+---
 
-      margin: 0;
-      padding: 0;
+<div id="content">
+  <h1 style="font-size: 7vw;">
+    {{ page.subdomain }}.{{ site.domain }}
+  </h1>
+</div>
 
-      height: 100%;
-      display: -webkit-flexbox;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-    }
-    h1 {
-      color: white;
-      text-align: center;
-      font-family: "Source Code Pro", Monaco, Consolas, "Courier New", monospace, Impact;
-      font-size: 5em;
-      font-size: 9vw;
-      text-shadow:
-        0 0 20px rgba(255, 255, 255, 0.5),
-        0 0 40px rgba(255, 255, 255, 0.5),
-        0 0 60px rgba(255, 255, 255, 0.5);
-    }
-    .footer {
-      background: rgba(0, 0, 0, 0.25);
-      
-      position: fixed;
-      width: 80vw;
-      bottom: 0;
-      left: 0;
-      padding: 2vh 10vw;
-
-      font-family: Helvetica, Tahoma, sans-serif;
-      text-align: center;
-      color: white;
-      font-size: 6vw;
-    }
-    #http-vs-https {
-      height: 1.2em;
-      vertical-align: middle;
-    }
-  </style>
-</head>
-<body>
-    <h1>hsts.badssl.com</h1>
-    <div class="footer"><img id="http-vs-https" src="http://hsts.badssl.com/hsts-test/status.svg" title="This is an image with an HTTP source location specified. If HSTS is working, the source should be rewritten to HTTPS. The image will vary depending on the outcome."></div>
-</body>
-</html>
+<div id="footer" style="font-size: 6vw;">
+  <img id="http-vs-https" src="http://{{ page.subdomain }}.{{ site.domain }}/hsts-test/status.svg" title="This is an image with an HTTP source location specified. If HSTS is working, the source should be rewritten to HTTPS. The image will vary depending on the outcome.">
+</div>
