--- a/domains/cert/sha1-2017.badssl.com/index.html
+++ b/domains/cert/sha1-2017.badssl.com/index.html
@@ -12,5 +12,5 @@ background: red
 </div>
 
 <div id="footer">
-  The certificate for this site is signed using SHA-1 and expires on Jan. 5, 2017.
+  The certificate for this site is signed using SHA-1<br>and expires on Jan. 5, 2017.
 </div>
