--- a/domains/cert/sha1.badssl.com/index.html
+++ b/domains/cert/sha1.badssl.com/index.html
@@ -12,5 +12,5 @@ background: rgb(246, 207, 47)
 </div>
 
 <div id="footer">
-  The certificate for this site is signed using SHA-1 and expires on Dec. 29, 2016.
+  The certificate for this site is signed using SHA-1<br>and expires on Dec. 29, 2016.
 </div>
