Mention the OSX 8192-bit RSA limitation in the footer.

--- a/domains/cert/rsa8192.badssl.com/index.html
+++ b/domains/cert/rsa8192.badssl.com/index.html
@@ -12,5 +12,6 @@ background: rgb(246, 207, 47)
 </div>
 
 <div id="footer">
-  This site uses an 8192-bit RSA key for key exchange.
+  This site uses an 8192-bit RSA key for key exchange.<br>
+  (8192-bit RSA keys are <a href="http://blog.shiz.me/post/67305143330/8192-bit-rsa-keys-in-os-x">not supported</a> on OSX by default.)
 </div>
