Add pinning test to frontpage, closes #93

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -198,6 +198,7 @@
     <a href="https://cbc.badssl.com/" class="neutral">cbc</a>
     <a href="" id="reveal-more">More...</a>
     <a href="https://sha256.badssl.com/" class="more good">sha256</a>
+    <a href="https://pinning-test.badssl.com/" class="more bad">pinning-test</a>
     <a href="https://hsts.badssl.com/" class="more goodish">hsts</a>
     <a href="https://preloaded-hsts.badssl.com/" class="more goodish">preloaded-hsts</a>
     <a href="https://subdomain.preloaded-hsts.badssl.com/" class="more bad">subdomain.<br>preloaded-hsts</a>
