Distinguish betwen the SAN field an SAN entries in the page descriptions.

--- a/domains/cert/1000-sans.badssl.com/index.html
+++ b/domains/cert/1000-sans.badssl.com/index.html
@@ -12,5 +12,5 @@ background: green
 </div>
 
 <div id="footer">
-  This site uses a certificate with 1000 <a href="https://tools.ietf.org/html/rfc5280#section-4.2.1.6">subjectAltNames</a>.
+  This site uses a certificate with 1000 <a href="https://tools.ietf.org/html/rfc5280#section-4.2.1.6">subjectAltName entries</a>.
 </div>
