Update rsa8192 description. Closes #110.

--- a/domains/cert/rsa8192.badssl.com/index.html
+++ b/domains/cert/rsa8192.badssl.com/index.html
@@ -11,7 +11,7 @@ background: rgb(246, 207, 47)
   </h1>
 </div>
 
-<div id="footer">
+<div id="footer" style="font-size: 2.75vw;">
   This site uses an 8192-bit RSA key for key exchange.<br>
-  (8192-bit RSA keys are <a href="http://blog.shiz.me/post/67305143330/8192-bit-rsa-keys-in-os-x">not supported</a> on OSX by default.)
+  (8192-bit RSA keys were <a href="http://blog.shiz.me/post/67305143330/8192-bit-rsa-keys-in-os-x">not supported</a> in OSX between 2006 and <a href="https://twitter.com/ivanristic/status/662581577835114497">2015</a>.)
 </div>
