Add page footer [to spoofed-favicon.badssl.com]

--- a/domains/misc/spoofed-favicon.badssl.com/index.html
+++ b/domains/misc/spoofed-favicon.badssl.com/index.html
@@ -9,3 +9,7 @@ background: gray
     {{ page.subdomain }}.<br />{{ site.domain }}
   </h1>
 </div>
+
+<div id="footer">
+  This site's <a href="https://en.wikipedia.org/wiki/Favicon">favicon</a> pretends to be the TLS lock icon.
+</div>
