Fix image sizing by wrapping in div. Closes #94.
The problem is that each image was being laid out using the parent's display: flex;

--- a/common/mixed/image/index.html
+++ b/common/mixed/image/index.html
@@ -9,5 +9,7 @@ background: rgb(246, 207, 47)
   <h1 style="font-size: 7vw;">
     mixed image
   </h1>
-  <img class="mixed" src="http://{{ site.http-domain }}/resources/image.jpg" alt="HTTP image">
+  <img>
+    <img class="mixed" src="http://{{ site.http-domain }}/resources/image.jpg" alt="HTTP image">
+  </div>
 </div>
