--- a/domains/mixed/very/index.html
+++ b/domains/mixed/very/index.html
@@ -20,7 +20,9 @@ background: red
   <h1 style="font-size: 7vw;">
     {{ page.subdomain }}.{{ site.domain }}
   </h1>
-  <img src="http://{{ page.subdomain }}.{{ site.domain }}/image.jpg" alt="very badssl">
+  <div>
+    <img src="http://{{ page.subdomain }}.{{ site.domain }}/image.jpg" alt="very badssl">
+  </div>
 </div>
 
 <script src="http://{{ site.http-domain }}/test/imported.js"></script>
