--- a/domains/mixed/mixed/index.html
+++ b/domains/mixed/mixed/index.html
@@ -9,5 +9,7 @@ background: rgb(246, 207, 47)
   <h1 style="font-size: 8vw;">
     {{ page.subdomain }}.{{ site.domain }}
   </h1>
-  <img class="mixed" src="http://{{ page.subdomain }}.{{ site.domain }}/image.jpg" alt="HTTP image">
+  <div>
+    <img class="mixed" src="http://{{ page.subdomain }}.{{ site.domain }}/image.jpg" alt="HTTP image">
+  </div>
 </div>
