Update https-everywhere message. Closes #84.
I wasn't able to find a release number. The latest version in Chrome reports itself as 2015.8.13, but it includes https://github.com/EFForg/https-everywhere/pull/3111 (which was landed in October). So let's just leave out the release number.

--- a/domains/upgrade/https-everywhere-http/index.html
+++ b/domains/upgrade/https-everywhere-http/index.html
@@ -13,5 +13,5 @@ background: rgb(170, 68, 68)
 
 <div id="footer" style="font-size: 2.5vw;">
   <i>HTTPS Everywhere</i> does not work or is not enabled.<br>
-  This domain is intended to be included in a future version of <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>.
+  This domain will be upgraded to HTTPS if you use <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>.
 </div>
