--- a/domains/upgrade/https-everywhere-https/index.html
+++ b/domains/upgrade/https-everywhere-https/index.html
@@ -13,5 +13,5 @@ background: rgb(68, 136, 68)
 
 <div id="footer" style="font-size: 2.5vw;">
   <img id="http-vs-https" src="http://{{ page.subdomain }}.{{ site.domain }}/redirect-test/status.svg" title="This is an image with an HTTP source location specified. If HTTPS Everywhere is working and activated, the source should be rewritten to HTTPS. The image will vary depending on the outcome."><br>
-  This domain is intended to be included in a future version of <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>.
+  This domain will be upgraded to HTTPS if you use <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>.
 </div>
